Fix a possible crash when the window focuses again

BUG:399724